--- a/7-2_套件說明.md
+++ b/7-2_套件說明.md
@@ -172,6 +172,7 @@ endlegend
 ### 2.2 簡化版套件分層圖（使用 Mermaid 語法）
 
 ```mermaid
+%%{init: {'theme':'base', 'themeVariables': { 'fontSize':'18px', 'fontFamily':'Arial'}}}%%
 graph TB
     subgraph FreshLog["食價登錄系統 (FreshLog)"]
 
