--- a/7-3_元件說明.md
+++ b/7-3_元件說明.md
@@ -458,6 +458,7 @@ endlegend
 ### 2.2 簡化版元件分層圖（使用 Mermaid 語法）
 
 ```mermaid
+%%{init: {'theme':'base', 'themeVariables': { 'fontSize':'18px', 'fontFamily':'Arial'}}}%%
 graph TB
     subgraph Components["src/components/"]
 
@@ -556,6 +557,7 @@ graph TB
 ### 2.3 元件樹狀結構圖（使用 Mermaid Tree Diagram）
 
 ```mermaid
+%%{init: {'theme':'base', 'themeVariables': { 'fontSize':'18px', 'fontFamily':'Arial'}}}%%
 graph TB
     Root["src/components/"]
 
@@ -1466,6 +1468,157 @@ export const WithFavorite = {
 
 ---
 
-**文件版本**：1.0
+## 附錄 A：Mermaid 圖表字體設定說明
+
+### A.1 基本字體設定
+
+在 Mermaid 圖表開頭使用 `%%{init: {...}}%%` 來設定字體大小與樣式：
+
+```mermaid
+%%{init: {'theme':'base', 'themeVariables': { 'fontSize':'18px', 'fontFamily':'Arial'}}}%%
+graph TB
+    A[節點 A] --> B[節點 B]
+```
+
+### A.2 可用的字體參數
+
+| 參數 | 說明 | 預設值 | 建議值 |
+|------|------|--------|--------|
+| `fontSize` | 全域字體大小 | `14px` | `16px` - `20px` |
+| `fontFamily` | 字體家族 | `"trebuchet ms", verdana, arial, sans-serif` | `'Arial'`, `'Microsoft JhengHei'`, `'Noto Sans TC'` |
+
+### A.3 完整主題配置範例
+
+```mermaid
+%%{init: {
+  'theme': 'base',
+  'themeVariables': {
+    'fontSize': '18px',
+    'fontFamily': 'Arial, Microsoft JhengHei, sans-serif',
+    'primaryColor': '#E8F5E9',
+    'primaryTextColor': '#000',
+    'primaryBorderColor': '#4CAF50',
+    'lineColor': '#4CAF50',
+    'secondaryColor': '#E3F2FD',
+    'tertiaryColor': '#FFF3E0'
+  }
+}}%%
+graph TB
+    A[節點 A] --> B[節點 B]
+```
+
+### A.4 不同字體大小對比
+
+| 字體大小 | 適用場景 | 範例 |
+|---------|---------|------|
+| `14px` | 預設大小（較小） | `%%{init: {'theme':'base', 'themeVariables': { 'fontSize':'14px'}}}%%` |
+| `16px` | 標準大小（適中） | `%%{init: {'theme':'base', 'themeVariables': { 'fontSize':'16px'}}}%%` |
+| `18px` | 較大字體（**推薦**） | `%%{init: {'theme':'base', 'themeVariables': { 'fontSize':'18px'}}}%%` |
+| `20px` | 大字體（簡報用） | `%%{init: {'theme':'base', 'themeVariables': { 'fontSize':'20px'}}}%%` |
+| `22px` | 超大字體（投影片） | `%%{init: {'theme':'base', 'themeVariables': { 'fontSize':'22px'}}}%%` |
+
+### A.5 繁體中文字體設定
+
+針對繁體中文顯示，建議使用以下字體家族設定：
+
+```mermaid
+%%{init: {
+  'theme': 'base',
+  'themeVariables': {
+    'fontSize': '18px',
+    'fontFamily': 'Microsoft JhengHei, Noto Sans TC, PingFang TC, Arial, sans-serif'
+  }
+}}%%
+graph TB
+    A[繁體中文節點] --> B[測試節點]
+```
+
+**字體優先順序說明**：
+1. **Microsoft JhengHei (微軟正黑體)**：Windows 系統預設繁體中文字體
+2. **Noto Sans TC**：Google 開源繁體中文字體
+3. **PingFang TC (蘋方-繁)**：macOS 系統繁體中文字體
+4. **Arial**：英文字母備用字體
+5. **sans-serif**：系統預設無襯線字體
+
+### A.6 進階樣式設定
+
+#### A.6.1 節點樣式字體大小
+
+如果需要針對特定節點調整字體，可使用 CSS 樣式：
+
+```mermaid
+%%{init: {'theme':'base', 'themeVariables': { 'fontSize':'18px'}}}%%
+graph TB
+    A[節點 A]:::largeNode --> B[節點 B]
+
+    classDef largeNode font-size:24px,font-weight:bold
+```
+
+#### A.6.2 不同區塊使用不同字體大小
+
+```mermaid
+%%{init: {'theme':'base', 'themeVariables': { 'fontSize':'18px'}}}%%
+graph TB
+    subgraph 標題區塊
+        A[大標題]:::titleStyle
+    end
+
+    subgraph 內容區塊
+        B[內容]:::contentStyle
+    end
+
+    A --> B
+
+    classDef titleStyle font-size:24px,font-weight:bold,fill:#E8F5E9
+    classDef contentStyle font-size:16px,fill:#E3F2FD
+```
+
+### A.7 線上編輯器測試
+
+建議使用以下線上編輯器測試 Mermaid 圖表字體效果：
+
+1. **Mermaid Live Editor**：https://mermaid.live/
+   - 官方編輯器，即時預覽
+   - 支援匯出 PNG/SVG/Markdown
+
+2. **VS Code Mermaid 插件**：
+   - 插件名稱：Markdown Preview Mermaid Support
+   - 在 VS Code 中直接預覽 Markdown 內的 Mermaid 圖表
+
+### A.8 常見問題
+
+**Q1：為什麼字體沒有變大？**
+- **A**：確認語法正確，`%%{init: {...}}%%` 必須在圖表第一行
+- 檢查是否有多餘的空格或換行
+- 確認使用的 Mermaid 版本支援 `themeVariables`（需 v8.6.0+）
+
+**Q2：繁體中文顯示為方塊或亂碼？**
+- **A**：確認字體家族包含繁體中文字體（如 Microsoft JhengHei）
+- 檢查渲染環境是否支援該字體
+- 嘗試使用系統預設字體：`'fontFamily': 'sans-serif'`
+
+**Q3：如何讓圖表在簡報中更清晰？**
+- **A**：使用較大字體（20px - 24px）
+- 減少節點數量，簡化圖表
+- 匯出為 SVG 格式（向量圖，不會失真）
+
+### A.9 本文件使用的字體設定
+
+本文件中的 Mermaid 圖表統一使用以下設定：
+
+```mermaid
+%%{init: {'theme':'base', 'themeVariables': { 'fontSize':'18px', 'fontFamily':'Arial'}}}%%
+```
+
+**設定說明**：
+- **fontSize: '18px'**：比預設 14px 大，適合閱讀
+- **fontFamily: 'Arial'**：通用字體，跨平台支援度高
+- **theme: 'base'**：基礎主題，保留自訂顏色設定
+
+如需調整字體大小，請修改 `fontSize` 參數即可（例如：`'fontSize':'20px'`）。
+
+---
+
+**文件版本**：1.1
 **最後更新**：2025-01-27
 **維護者**：FreshLog 開發團隊
