--- a/9-2_其他附屬之各種元件.md
+++ b/9-2_其他附屬之各種元件.md
@@ -422,11 +422,11 @@
 
 ---
 
-#### 1.2.5 AiRecommendation.vue
+#### 1.2.5 VegetableList.vue
 
-**路徑**: `src/views/Consumer/AiRecommendation.vue`
+**路徑**: `src/views/Consumer/VegetableList.vue`
 **路由**: `/ai-recommendation`
-**用途**: AI 智慧推薦頁面
+**用途**: AI 智慧推薦頁面（蔬菜列表）
 
 ##### 功能特性
 
@@ -1077,7 +1077,7 @@ userStore.logout()
 | `/veggie` | - | Redirect to `/veggie/F001` | 蔬菜預設 | ✗ |
 | `/veggie/:id` | VeggieInfo | VeggieInfoPage.vue | 蔬菜內頁 | ✗ |
 | `/foodsafety/:id` | - | FoodSafetyDetail.vue | 食安內頁 | ✗ |
-| `/ai-recommendation` | - | AiRecommendation.vue | AI 推薦 | ✗ |
+| `/ai-recommendation` | - | VegetableList.vue | AI 推薦 | ✗ |
 | `/ai-recommendation/:id` | RecipeDetail | RecipeDetail.vue | 食譜內頁 | ✗ |
 | `/farmer/crop-dashboard` | - | CropDashboard.vue | 農民儀表板 | ✓ |
 | `/member/login` | - | Login.vue | 登入 | ✗ |
